fix horizontal scroll bar solution

--- a/examples/app.scss
+++ b/examples/app.scss
@@ -12,6 +12,12 @@ img {
   border: 1px solid red;
 }
 
+.wrapper {
+  &.scroll-horizontal {
+    overflow-x: scroll;
+  }
+}
+
 .lazy-hide {
   display: none;
 }
